# modular-pytest-gen

./: .gitignore  README.md  autotest.toml  pyproject.toml  repo-to-text_2026-06-11-13-41-13-UTC.txt  template_autotest.toml
.github/workflows/: ci.yml  docs.yml  tests.yaml
docs/: conf.py  index.rst  readme.rst
docs/source/: cli_reference.rst  core_parsing.rst  llm_orchestration.rst  modular_pytest_gen.cli.rst  modular_pytest_gen.rst  modules.rst  test_validation.rst
src.tmp/modular_pytest_gen/: client.py  config.py  docstring.py  injector.py
src.tmp/modular_pytest_gen/cli/: analyze.py  autodoc.py  clean.py  init.py  main.py  merge.py  run.py
src/modular_pytest_gen/: __init__.py  analyzer.py  client.py  config.py  docstring.py  graph.py  injector.py  layout.py  main.py  merge.py  parser.py  prompter.py  resolver.py  templates.py  validator.py
src/modular_pytest_gen/cli/: __init__.py  analyze.py  autodoc.py  clean.py  init.py  main.py  merge.py  run.py
tests/: test_client.py  test_config.py  test_layout.py  test_parser.py  test_prompter.py  test_resolver.py
tests/module/: sensor_math.py
