[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-pytest-gen"
version = "0.1.0"
description = "A modular generator for pytest files using AST parsing and LLM prompts."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Required for parsing TOML in Python 3.9 and 3.10
    "tomli>=2.0.1; python_version < '3.11'",
    "pytest>=7.0.0",
    "typer>=0.9.0",
    "libcst",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# This exposes the CLI command to the user's terminal after installation
modular-pytest-gen = "modular_pytest_gen.cli.main:cli_entry"

# Note: If you want to use modular-pytest-gen on its own codebase, 
# you will eventually need to re-add [tool.modular_pytest_gen] here.